Fix Icon buttons in datatable are misaligned #1402

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -541,6 +541,7 @@ $data-table-card-title-top: 20px;
 $data-table-card-padding: 24px;
 $data-table-button-padding-right: 16px;
 $data-table-cell-top: $data-table-card-padding / 2;
+$data-table-cell-bottom: $data-table-card-padding / 2;
 
 /* TOOLTIP */
 $tooltip-font-size: 10px !default;
